--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "connect-rest": "^1.9.5",
     "css-loader": "^0.28.2",
     "del": "^3.0.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^1.1.5",
     "github-markdown-css": "^2.6.0",
