--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "body-parser": "^1.17.2",
+    "browser-sync": "^2.18.13",
     "connect-rest": "^1.9.5",
     "css-loader": "^0.28.2",
     "del": "^3.0.0",
@@ -38,6 +39,7 @@
     "gulp-connect": "^5.0.0",
     "gulp-less": "^3.1.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.1.0",
     "gulp-remember": "^0.3.1",
     "gulp-rename": "^1.2.2",
